# HandHeld_2

./: .gitignore  version_inc.py
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.2.0/GD32E230V_START_Demo_Suites/Utilities/: gd32e230v_start.c  gd32e230v_start.h
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E230C_EVAL_Demo_Suites/: change log.txt
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E230C_EVAL_Demo_Suites/Utilities/: gd32e230c_eval.c  gd32e230c_eval.h  gd32e230c_lcd_eval.c  gd32e230c_lcd_eval.h
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E230C_START_Demo_Suites/: change log.txt
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E230C_START_Demo_Suites/Utilities/: gd32e230c_start.c  gd32e230c_start.h
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E230F_START_Demo_Suites/: change log.txt
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E230G_START_Demo_Suites/: change log.txt
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E230K_START_Demo_Suites/: change log.txt
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E230V_START_Demo_Suites/: change log.txt
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E231K_EVAL_Demo_Suites/: change log.txt
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E235C_EVAL_Demo_Suites/: change log.txt
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E235F_START_Demo_Suites/: change log.txt
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E235G_START_Demo_Suites/: change log.txt
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E235K_START_Demo_Suites/: change log.txt
doc/Hardware/GD32/GD32E23x_Demo_Suites_V2.5.0/GD32E235V_START_Demo_Suites/: change log.txt
files/vgkitboard_4130s/: .gitignore  gitFocePushRemote.bat
files/vgkitboard_4130s/app/: crc8.h  eventUnit.h  led.h  myFlashData.c  stmflash.c  stmflash.h
files/vgkitboard_4130s/peripheral/: myADC.c  myInputCapture.c  myInputCapture.h  myUart.c
files/vgkitboard_4130s/project/: stm32f10x_it.h  system_stm32f10x.c
files/vgkitboard_4130s/radio/: myRadio.c  myRadio_gpio.h  radio.h
sources/: CMakeLists.txt  HandHeld_2.uvmpw
sources/Device/: CMakeLists.txt  Device.sct  Device.uvoptx  Device.uvprojx
sources/Device/src/: Device.cpp  Device.h  defines.cpp  defines.h  main.cpp  opt.h
sources/Device/src/Display/: Colors.cpp  Colors.h  Display1602.cpp  Display1602.h  Display7735.cpp  Display7735.h  Icons.cpp  Icons.h  Text.h
sources/Device/src/Display/Font/: Font.cpp  Font.h
sources/Device/src/Hardware/: Power.cpp  Power.h  Timer.cpp  Vibrato.cpp  Vibrato.h
sources/Device/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_ADC.cpp  HAL_CLOCK.cpp  HAL_I2C.cpp  HAL_PINS.cpp  HAL_PINS.h  HAL_ROM.cpp  HAL_TIM2.cpp  gd32e23x_it.cpp  gd32e23x_it.h  gd32e23x_libopt.h  systick.cpp  systick.h
sources/Device/src/Keyboard/: Keyboard.cpp  Keyboard.h
sources/Device/src/Menu/: Menu.cpp  Menu.h  Menu.txt  MenuItemDef.h  MenuItems.cpp  MenuItems.h
sources/Device/src/Menu/Pages/: PageAlarm.cpp  PageJournal.cpp  PageWatch.cpp  Pages.cpp  Pages.h
sources/Device/src/Modules/Beeper/: Beeper.cpp  Beeper.h  driverBeeper.cpp  driverBeeper.h
sources/Device/src/Modules/Beeper/Sounds/: sound1.h  sound10.h  sound2.h  sound3.h  sound4.h  sound5.h  sound6.h  sound7.h  sound8.h  sound9.h
sources/Device/src/Modules/Beeper/_old/: Beeper.cpp  Beeper.h  Player.cpp  Player.h
sources/Device/src/Modules/LED/: LED.cpp  LED.h  driverLED.h  driverLED_1602.cpp  driverLED_7735.cpp
sources/Device/src/Modules/PAN3060/: PAN3060.cpp  PAN3060.h  chirp_rf.cpp  chirp_rf.h
sources/Device/src/Modules/PCF8563/: PCF8563.cpp  PCF8563.h  PCF8563_gd.cpp
sources/Device/src/Modules/ST7735/: ST7735.cpp  ST7735.h
sources/Device/src/Modules/WH1602B/: WH1602B.cpp  WH1602B.h
sources/Device/src/Settings/: Settings.cpp  Settings.h  Source.cpp  Source.h
sources/Device/src/Storage/: Storage.cpp  Storage.h
sources/Device/src/Utils/: FPS.cpp  FPS.h  Math.cpp  Math.h  StringUtils.cpp  StringUtils.h
sources/Device/src/_old/PlayerMIDI/: BeeperMIDI.cpp  BeeperMIDI.h  PlayerConfigMIDI.h  PlayerMIDI.cpp  PlayerMIDI.h
sources/Device/src/_old/PlayerMIDI/Melodies/: melody1.cpp  melody1.h  melody10.cpp  melody10.h  melody2.cpp  melody2.h  melody3.cpp  melody3.h  melody4.cpp  melody4.h  melody5.cpp  melody5.h  melody6.cpp  melody6.h  melody7.cpp  melody7.h  melody8.cpp  melody8.h  melody9.cpp  melody9.h
sources/Loader/: CMakeLists.txt  Loader.sct  Loader.uvoptx  Loader.uvprojx
sources/Loader/src/: Device.cpp  Device.h  defines.h  main.cpp  stm_includes.h
sources/Loader/src/Hardware/: Keyboard.cpp  Keyboard.h  Timer.h
sources/Loader/src/Hardware/CMSIS/: system_gd32e23x.c
sources/Loader/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_PINS.cpp  HAL_PINS.h  gd32e23x_it.cpp  systick.cpp
sources/Loader/src/Modules/LED/: LED.cpp  LED.h  driverLED.cpp  driverLED.h
sources/Loader/src/Modules/PAN3060/: PAN3060.cpp  PAN3060.h  chirp_rf.cpp  chirp_rf.h
sources/Loader/src/Utils/: Buffer.h  String.cpp  String.h
sources/Transmitter/: .gitignore  CMakeLists.txt  README.md
sources/Transmitter/app/: ReadKey.c  ReadKey.h  crc8.c  eventUnit.c  key.c  key.h  led.c  myDisplayUnit.c  myDisplayUnit.h  myFlashData.h  myLcd.c  myLcd.h  myTim.c  myTim.h
sources/Transmitter/core/: core_cm3.h
sources/Transmitter/keil_v5/: Transmitter.sct  Transmitter.uvoptx  Transmitter.uvprojx  project.uvoptx  project.uvprojx
sources/Transmitter/peripheral/: myADC.c  myADC.h  myUart.c  myUart.h  myUart3.c  myUart3.h  sys.c
sources/Transmitter/project/: board.h  main.c  main.h  stm32f10x_it.c  system_stm32f10x.h
sources/Transmitter/radio/: myRadio.c  myRadio.h  myRadio_gpio.c  pan3029.c  pan3029.h  pan3029_port.c  pan3029_port.h  radio.c
sources/Transmitter/upgrader/: Timer.c  Timer.h  Upgrader.c  Upgrader.h
sources/Transmitter/vs_keil/: _core_cm3.h  _stm32f10x.h  stdint.h
sources/common/GD32E23x_Firmware_Library/Template/: gd32e23x_it.c  main.c
sources/common/VS_KEIL/: core_cm23.h
sources/scripts/Keil/: edit.bat
sources/scripts/vs_keil/: assembly.bat  edit.bat
sources/scripts/vs_win/: assembly.bat  edit.bat
(+352 files in other folders)
